--- a/examples/test.html
+++ b/examples/test.html
@@ -27,6 +27,7 @@
             <div>
               the 5th level div
             </div>
+            <div>the 5th level div</div>
         </div>
       </div>
     </div>
